tests/baselines/reference/parserIndexSignature11.errors.txt
parserIndexSignature11.ts(2,10): error TS2304: Cannot find name 'p'.
parserIndexSignature11.ts(3,9): error TS1021: An index signature must have a type annotation.
parserIndexSignature11.ts(4,10): error TS1096: An index signature must have exactly one parameter.


==== parserIndexSignature11.ts (3 errors) ====
    interface I {
            [p]; // Used to be indexer, now it is a computed property
             ~
!!! error TS2304: Cannot find name 'p'.
            [p1: string];
            ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
            [p2: string, p3: number];
             ~~
!!! error TS1096: An index signature must have exactly one parameter.
    }